Реализует разметку Модального окна

--- a/index.html
+++ b/index.html
@@ -863,6 +863,36 @@
 
     <!-- Модальное окно -->
 
+    <div class="modal-window">
+
+      <div class="modal-auth">
+
+        <button class="button-modal-close" type="button">
+          <span class="visually-hidden">Закрыть.</span>
+        </button>
+
+        <section class="modal-content">
+          <h2 class="modal-title">Мы обязательно ответим вам!</h2>
+
+          <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
+
+            <label class="visually-hidden" for="modal-form-name">Имя и фамилия.</label>
+            <input class="form-input" type="text" id="modal-form-name" name="form-name" placeholder="Имя и фамилия" required>
+
+            <label class="visually-hidden" for="modal-form-email">Телефон.</label>
+            <input class="form-input" type="email" id="modal-form-email" name="form-email" placeholder="email@example.com" required>
+
+            <textarea class="form-input" name="message" placeholder="В свободной форме"></textarea>
+            <button class="modal-button button button-light" type="submit">Отправить</button>
+
+          </form>
+
+        </section>
+
+      </div>
+
+    </div>
+
   </div>
 
 </body>
