--- a/index.html
+++ b/index.html
@@ -877,13 +877,13 @@
           <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
 
             <label class="visually-hidden" for="modal-form-name">Имя и фамилия.</label>
-            <input class="form-input" type="text" id="modal-form-name" name="form-name" placeholder="Имя и фамилия" required>
+            <input class="form-input field" type="text" id="modal-form-name" name="form-name" placeholder="Имя и фамилия" required>
 
             <label class="visually-hidden" for="modal-form-email">Телефон.</label>
-            <input class="form-input" type="email" id="modal-form-email" name="form-email" placeholder="email@example.com" required>
+            <input class="form-input field" type="email" id="modal-form-email" name="form-email" placeholder="email@example.com" required>
 
-            <textarea class="form-input" name="message" placeholder="В свободной форме"></textarea>
-            <button class="modal-button button button-light" type="submit">Отправить</button>
+            <textarea class="form-input field" name="message" placeholder="В свободной форме"></textarea>
+            <button class="modal-button button button-other" type="submit">Отправить</button>
 
           </form>
 
