--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles/styles.css" rel="stylesheet">
+  <link href="favicon.ico.ico" rel="icon">
   <title>Каталог Интернет-магазина мороженого "Глейси"</title>
 </head>
 
