:heavy_check_mark: Сборка #9

--- a/9/catalog.html
+++ b/9/catalog.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles/styles.css" rel="stylesheet">
+  <link href="favicon.ico.ico" rel="icon">
   <title>Каталог Интернет-магазина мороженого "Глейси"</title>
   <base href="https://htmlacademy-htmlcss.github.io/2209519-gllacy-1/9/">
 </head>
@@ -623,7 +624,7 @@
 
                 </a>
 
-                <p class="catalog-text">Сливочный пломбир с банановым вкусом</p>
+                <p class="catalog-text">Сливочный пломбир <br>с банановым вкусом</p>
 
                 <div class="catalog-price-wrapper">
 
@@ -693,7 +694,7 @@
 
                 </a>
 
-                <p class="catalog-text">Сливочный пломбир с клубничным вкусом</p>
+                <p class="catalog-text">Сливочный пломбир <br>с клубничным вкусом</p>
 
                 <div class="catalog-price-wrapper">
 
@@ -763,7 +764,7 @@
 
                 </a>
 
-                <p class="catalog-text">Сливочный пломбир с ментоловым сиропом</p>
+                <p class="catalog-text">Сливочный пломбир <br>с ментоловым сиропом</p>
 
                 <div class="catalog-price-wrapper">
 
@@ -833,7 +834,7 @@
 
                 </a>
 
-                <p class="catalog-text">Классическое крем-брюле</p>
+                <p class="catalog-text">Классическое <br>крем-брюле</p>
 
                 <div class="catalog-price-wrapper">
 
