:heavy_check_mark: Сборка #9

--- a/9/index.html
+++ b/9/index.html
@@ -130,7 +130,7 @@
 
               <!-- Всплывающий блок -->
               <div class="login dropdown-container">
-                <h2 class="dropdown-title small-title login-title">Личный кабинет</h2>
+                <h2 class="dropdown-title login-title">Личный кабинет</h2>
 
                 <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 
@@ -169,7 +169,7 @@
               <div class="basket dropdown-container">
 
                 <div class="basket-content basket-content-full">
-                  <h2 class="basket-title small-title dropdown-title">Корзина</h2>
+                  <h2 class="basket-title dropdown-title">Корзина</h2>
 
                   <ul class="basket-list list-reset">
 
@@ -180,7 +180,7 @@
                         <img src="images/catalog/catalog-item-1.jpg" width="46" height="46" alt="Шарик мороженого цвета малины.">
 
                         <div class="basket-container">
-                          <h3 class="basket-subtitle small-subtitle">Малинка</h3>
+                          <h3 class="basket-subtitle">Малинка</h3>
                           <span class="basket-desc">1&nbsp;кг&nbsp;х&nbsp;310&nbsp;₽</span>
                         </div>
 
@@ -201,7 +201,7 @@
                         <img src="images/catalog/catalog-item-4.jpg" width="46" height="46" alt="Шарик мороженого голубого цвета с разноцветной присыпкой.">
 
                         <div class="basket-container">
-                          <h3 class="basket-subtitle small-subtitle">Бабл-гам</h3>
+                          <h3 class="basket-subtitle">Бабл-гам</h3>
                           <span class="basket-desc">1,5&nbsp;кг&nbsp;х&nbsp;320&nbsp;₽</span>
                         </div>
 
@@ -222,6 +222,10 @@
                     <span class="basket-total">Итого:&nbsp;790&nbsp;₽</span>
                   </div>
 
+                </div>
+
+                <div class="basket-content basket-content-empty">
+                  <h2 class="basket-title dropdown-title">Ваша корзина пока пуста</h2>
                 </div>
 
               </div>
@@ -258,7 +262,7 @@
 
                 <h2 class="slide-caption">Нежный пломбир с&nbsp;клубничным джемом</h2>
 
-                <p class="slide-description">Натуральное мороженое из&nbsp;свежих сливок и&nbsp;молока с&nbsp;вкуснейшим клубничным джемом&nbsp;&mdash; это идеальный десерт для всей семьи.</p>
+                <p class="slide-description">Натуральное мороженое из&nbsp;свежих сливок и&nbsp;молока с&nbsp;вкуснейшим клубничным джемом&nbsp;&ndash; это идеальный десерт для всей семьи.</p>
 
                 <a class="slide-link button" href="#">Заказать</a>
 
