Исправляет и дополняет реализацию Модального окна

--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
 
     <!-- Модальное окно -->
 
-    <div class="modal-window">
+    <dialog class="modal-window modal-window-open">
 
       <div class="modal-auth">
 
@@ -896,7 +896,7 @@
 
       </div>
 
-    </div>
+    </dialog>
 
   </div>
 
