:heavy_check_mark: Сборка #9

--- a/9/catalog.html
+++ b/9/catalog.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles/styles.css" rel="stylesheet">
-  <link href="favicon.ico.ico" rel="icon">
+  <link href="favicon.ico" rel="icon">
   <title>Каталог Интернет-магазина мороженого "Глейси"</title>
   <base href="https://htmlacademy-htmlcss.github.io/2209519-gllacy-1/9/">
 </head>
