--- a/9/index.html
+++ b/9/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles/styles.css" rel="stylesheet">
-  <link href="favicon.ico.ico" rel="icon">
+  <link href="favicon.ico" rel="icon">
   <title>Интернет-магазин мороженого "Глейси"</title>
   <base href="https://htmlacademy-htmlcss.github.io/2209519-gllacy-1/9/">
 </head>
@@ -869,7 +869,7 @@
 
     <!-- Модальное окно -->
 
-    <div class="modal-window">
+    <dialog class="modal-window modal-window-open">
 
       <div class="modal-auth">
 
@@ -897,7 +897,7 @@
 
       </div>
 
-    </div>
+    </dialog>
 
   </div>
 
