--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
 
                 </div>
 
-                <textarea class="order-form-input field" id="address" name="address" placeholder="ул. Большая Конюшенная, 19/8"></textarea>
+                <textarea class="order-form-input field field-textarea" id="address" name="address" placeholder="ул. Большая Конюшенная, 19/8"></textarea>
 
               </fieldset>
 
@@ -887,7 +887,7 @@
             <label class="visually-hidden" for="modal-form-email">Телефон.</label>
             <input class="form-input field" type="email" id="modal-form-email" name="form-email" placeholder="email@example.com" required>
 
-            <textarea class="form-input field" name="message" placeholder="В свободной форме"></textarea>
+            <textarea class="form-input field modal-textarea" name="message" placeholder="В свободной форме"></textarea>
             <button class="modal-button button button-other" type="submit">Отправить</button>
 
           </form>
